tests/machine/x/hs/list_assign.error

/workspace/mochi/tests/machine/x/hs/list_assign.hs:16:14: error:
    • No instance for (Num [a0]) arising from the literal ‘3’
    • In the expression: 3
      In an equation for ‘nums’: nums = 3
      In the expression:
        do let nums = 3
           print ((nums !! 1))
   |
16 |   let nums = 3
   |              ^

/workspace/mochi/tests/machine/x/hs/list_assign.hs:17:3: error:
    • Ambiguous type variable ‘a0’ arising from a use of ‘print’
      prevents the constraint ‘(Show a0)’ from being solved.
      Relevant bindings include
        nums :: [a0]
          (bound at /workspace/mochi/tests/machine/x/hs/list_assign.hs:16:7)
      Probable fix: use a type annotation to specify what ‘a0’ should be.
      Potentially matching instances:
        instance Show Ordering -- Defined in ‘GHC.Show’
        instance Show a => Show (Maybe a) -- Defined in ‘GHC.Show’
        ...plus 25 others
        ...plus 12 instances involving out-of-scope types
        (use -fprint-potential-instances to see them all)
    • In a stmt of a 'do' block: print ((nums !! 1))
      In the expression:
        do let nums = 3
           print ((nums !! 1))
      In an equation for ‘main’:
          main
            = do let nums = ...
                 print ((nums !! 1))
   |
17 |   print ((nums !! 1))
   |   ^^^^^


Context around line 16:
   14| main :: IO ()
   15| main = do
   16|   let nums = 3
   17|   print ((nums !! 1))
   18| 
